<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.wisecloud.mdm.app.ui.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.wisecloud.mdm.app.ui.auth.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.wisecloud.mdm.app.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_deviceDetail"
            app:destination="@id/deviceDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/deviceDetailFragment"
        android:name="com.wisecloud.mdm.app.ui.device.DeviceDetailFragment"
        android:label="@string/device_detail_title"
        tools:layout="@layout/fragment_device_detail">

        <argument
            android:name="sn"
            app:argType="string" />
    </fragment>

</navigation>
